# robot_autonomy_1

RA1_ws/devel/: .catkin  .rosinstall  setup.sh
RA1_ws/devel/lib/locobot_description_v3/: forkin  parser
RA1_ws/devel/lib/pkgconfig/: locobot_description_v3.pc
RA1_ws/devel/share/locobot_description_v3/cmake/: locobot_description_v3Config.cmake
RA1_ws/src/locobot_description_v3/: CMakeLists.txt
RA1_ws/src/locobot_description_v3/launch/: display.launch  gazebo.launch
RA1_ws/src/locobot_description_v3/meshes/: base_link.STL
RA1_ws/src/locobot_description_v3/src/: .forward_kinematics.cpp.swo  .forward_kinematics.cpp.swp  .parser.cpp.swp  forward_kinematics.cpp  parser.cpp
RA1_ws/src/locobot_description_v3/urdf/: .locobot_description_v3.urdf.swo  .locobot_description_v3.urdf.swp  locobot_description_v3.gv  locobot_description_vrep.urdf
code/: .forward_kinematics.cpp.swp  forward_kinematics.cpp  forward_kinematics.py  locobot_joint_ctrl.py
code/utilities/: vrep_utils.py
